style/main.css
/* ... */
#nav {
	display: inline-block;
	display: flex;
	display: -webkit-flex;
	flex-direction: row;
	-webkit-flex-direction: row;
	flex-wrap: nowrap;
	-webkit-flex-wrap: nowrap;
	align-items: center;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 64px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	padding: 36px 12px 12px;
}

#nav * {
	vertical-align: middle;
}

#logo {
	flex: 0 0 auto;
	-webkit-flex: 0 0 auto;
	display: inline-block;
	font-size: 3.2em;
	font-weight: 600;
	margin-right: 12px;
	padding-bottom: 6px;
	max-width: 220px;
	color: inherit;
	text-decoration: none;
	overflow: hidden;
	white-space: nowrap;
	transition: max-width 0.5s;
	-webkit-transition: max-width 0.5s;
	-moz-transition: max-width 0.5s;
	-o-transition: max-width 0.5s;
}

#logo::before {
	display: inline-block;
	width: 1em;
	height: 44px;
	background-image: url("../icon/general.svg");
	background-repeat: no-repeat;
	background-size: 1em 1em;
	background-position: 50% 50%;
	vertical-align: top;
	content: "";
}

#logo:active::before,
#logo:focus::before {
	animation: logo-hover 0.5s ease;
	-webkit-animation: logo-hover 0.5s ease;
	-moz-animation: logo-hover 0.5s ease;
}

#nav form {
	flex: 1 1 auto;
	-webkit-flex: 1 1 auto;
	display: inline-block;
	display: inline-flex;
	display: -webkit-inline-flex;
	flex-direction: row;
	-webkit-flex-direction: row;
	flex-wrap: nowrap;
	-webkit-flex-wrap: nowrap;
	align-items: center;
	-webkit-align-items: center;
}

input[type='text'] {
	flex: 1 1 auto;
	-webkit-flex: 1 1 auto;
	font-family: "Roboto", Arial, sans-serif;
	font-size: 2.0em;
	background-color: transparent;
	padding: 0px 6px 3px;
	width: 240px;
	max-height: 28px;
	border: none;
	border-bottom: 1px solid lightgray;
	color: rgba(0, 0, 0, 0.7);
	box-shadow: inset 0px 0px 0px 0px
		rgb(203, 80, 39);
	outline: none;
}

input[type='text']:focus {
	border-bottom: 1px solid rgb(203, 80, 39);
	color: rgba(0, 0, 0, 0.9);
	box-shadow: inset 0px -1px 0px 0px
		rgb(203, 80, 39);
}

#nav button {
	flex: 0 0 auto;
	-webkit-flex: 0 0 auto;
	margin-left: 12px;
	border: none;
	border-radius: 50%;
	width: 3.6em;
	height: 3.6em;
	line-height: 2.4em;
	text-shadow: 0px -1px 1px
		rgba(0, 0, 0, 0.5);
	background-color: rgb(203, 80, 39);
	outline: none;
	color: white;
	box-shadow: 0px 4px 4px 0px
		rgba(0, 0, 0, 0.2),
		0px 0px 6px 0px rgba(0, 0, 0, 0.2);
	bottom: 0px;
	z-index: 30;
	transition: box-shadow 0.2s;
	-webkit-transition: box-shadow 0.2s;
	-moz-transition: box-shadow 0.2s;
	-o-transition: box-shadow 0.2s;
}

#nav button:active {
	box-shadow: 0px 8px 8px 0px
		rgba(0, 0, 0, 0.2),
		0px 0px 6px 0px rgba(0, 0, 0, 0.2);
}

#nav button i {
	font-size: 1.4em;
}

/* Homepage */

#homepage {
	position: absolute;
	left: 0;
	top: 32px;
	width: 100%;
	height: calc(50% - 64px);
	background-image: url("../icon/general.svg");
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat;
	opacity: 0;
	transition: opacity 0.5s;
	-webkit-transition: opacity 0.5s;
	-moz-transition: opacity 0.5s;
	-o-transition: opacity 0.5s;
}

body.homepage #homepage {
	opacity: 1;
}

body.homepage #page-wrapper {
	top: calc(50% - 32px);
}

body.homepage.msie #page-wrapper,
body.homepage.edge #page-wrapper {
	top: 45%;
}

body.homepage #nav #logo {
	max-width: 0;
}

body.homepage #nav {
	/*position: relative;*/
}

#homepage-text {
	opacity: 0;
	max-height: 0;
	padding: 0 24px;
	font-size: 1.6em;
	transition: opacity 0.3s, max-height 0s linear 0.3s;
	-webkit-transition: opacity 0.3s, max-height 0s linear 0.3s;
	-moz-transition: opacity 0.3s, max-height 0s linear 0.3s;
	-o-transition: opacity 0.3s, max-height 0s linear 0.3s;
}

#homepage-text h2 {
	font-size: 2.0em;
	margin: 0;
}

#homepage-text code {
	display: inline-block;
	font-family: Roboto, Arial, sans-serif;
	padding: 3px 3px;
	background-color: rgb(252, 234, 168);
	/*border: 1px dashed gray;*/
	cursor: pointer;
}

body.homepage #homepage-text {
	opacity: 1;
	max-height: 256px;
	padding-bottom: 12px;
	transition: opacity 0.5s, max-height 0.4s, padding-bottom 0.1s;
	-webkit-transition: opacity 0.5s, max-height 0.4s, padding-bottom 0.1s;
	-moz-transition: opacity 0.5s, max-height 0.4s, padding-bottom 0.1s;
	-o-transition: opacity 0.5s, max-height 0.4s, padding-bottom 0.1s;
}

body.homepage #homepage-text h2 {
	margin: 0 0 8px;
}

/* Rendering */

.equation.render,
.brackets.render {
	font-size: 3.2em;
	font-weight: 300;
}

.result-text {
	font-size: 2.4em;
}

.result-text > .fa {
	margin-right: 12px;
}

.error-result {
	font-size: 2.4em;
	font-weight: 300;
}

.error-result::before,
.error-result::after {
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	transform: translate(0, 0);
	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
}

.error-result::before {
	margin-right: 12px;
	content: "\f071";
}

.render .expression-group,
.render .multiply-group,
.render .fraction-group,
.render .exponent-group,
.render .algebra-group,
.render .plus-minus-group,
.render .operation,
.render .brackets,
.render .number {
	display: inline-block;
}

.render .equals,
.card > .query-info > .equals {
	margin: 0em 0.3em;
	opacity: 0.5;
}

.render *:not(.radicand):not(.numerator):not(.denominator) > .parentheses:not(.exponent)::before,
.render .fraction.base::before {
	content: "(";
}

.render *:not(.radicand):not(.numerator):not(.denominator) > .parentheses:not(.exponent)::after,
.render .fraction.base::after {
	content: ")";
}
/* ... */

